@@ -358,6 +358,7 @@ protected:
     void show_midi_rules();
     void show_script_slots();
     void on_action_view_status_bar();
+    void on_action_refresh_all();
     void on_action_warn_user_on_extensions();
     void on_action_sync_sampler_instrument_selection();
     void on_action_help_about();
@@ -370,7 +371,8 @@ protected:
     void on_action_replace_sample();
     void on_action_replace_all_samples_in_all_groups();
     void on_action_remove_sample();
-    
+    void on_action_remove_unused_samples();
+
     // script right-click popup actions
     void on_script_treeview_button_release(GdkEventButton* button);
     void on_action_add_script_group();
